examples/c/error-codes/violates-constraint/fatal/CV-FD3-bad-static.output
CV-FD3-bad-static.c:2:8: warning: declaration of 'struct foo' will not be visible outside of this function [-Wvisibility]
struct foo x;
       ^
CV-FD3-bad-static.c:2:12: error: variable has incomplete type 'struct foo'
struct foo x;
           ^
CV-FD3-bad-static.c:2:8: note: forward declaration of 'struct foo'
struct foo x;
       ^
1 warning and 1 error generated.
Translation failed (kcc_config dumped). To repeat, run this command in directory fatal:
